change kunde and chance controller
